--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="icons/backtothefulture.png" target="_blank"><img src="/icons/backtothefulture.png" alt="movie_img"></a>
                         <h2>De Volta Para o futuro</h2>
                         <p>Ano: 1985</p>
-                        <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/back_to_future.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
