--- a/pages/back_to_future.html
+++ b/pages/back_to_future.html
@@ -26,15 +26,15 @@
     </header>
     <div class="content">
         <div class="banner">
-            <img src="/icons/banners/interstellar.jpg" alt="Interstellar Banner">
+            <img src="/icons/banners/back_tofuture_banner.jpg" alt="Back To The Future Banner">
             <div class="txt_content">
-                <h2>Interstellar</h2>
-                <article>As reservas naturais da Terra estão chegando ao fim e um grupo de astronautas recebe a missão de verificar possíveis planetas para receberem a população mundial, possibilitando a continuação da espécie. Cooper é chamado para liderar o grupo e aceita a missão sabendo que pode nunca mais ver os filhos. Ao lado de Brand, Jenkins e Doyle, ele seguirá em busca de um novo lar.</article>
+                <h2>De Volta Para o Futuro</h2>
+                <article>Marty McFly é um adolescente que viaja acidentalmente para o ano de 1955 em um DeLorean modificado como máquina do tempo, criado por seu excêntrico amigo, Dr. Emmett Brown. Lá, ele encontra seus pais ainda jovens e precisa garantir que eles se apaixonem, ou ele deixará de existir.</article>
                 <div class="movie_infos">
-                    <article><strong>Diretor:</strong> Christopher Nolan</article>
-                    <article><strong>Gênero:</strong> Ficção científica, Drama</article>
-                    <article><strong>Duração:</strong> 2h 49min</article>
-                    <article><strong>Lançamento:</strong> 6 de novembro de 2014 (Brasil)</article>
+                    <article><strong>Diretor:</strong> Robert Zemeckis</article>
+                    <article><strong>Gênero:</strong> Ficção científica, Aventura, Comédia</article>
+                    <article><strong>Duração:</strong> 1h 56min</article>
+                    <article><strong>Lançamento:</strong> 25 de dezembro de 1985 (Brasil)</article>
                 </div>
                 
                 <div class="assessment_movie">
