--- a/pages/back_to_future.html
+++ b/pages/back_to_future.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div id = "logo">
-                <img src="../icons/logo1.png" alt="logo">
+                <a href="/index.html"><img src="../icons/logo1.png" alt="logo"></a>
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
@@ -36,7 +36,7 @@
                     <article><strong>Duração:</strong> 1h 56min</article>
                     <article><strong>Lançamento:</strong> 25 de dezembro de 1985 (Brasil)</article>
                 </div>
-                
+
                 <div class="assessment_movie">
                     <strong><p>IMDb: 8,7/10</p></strong>   
                     <strong><p>Amazon: 4,7/5</p></strong>
