--- a/pages/interstellar.html
+++ b/pages/interstellar.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div id = "logo">
-                <img src="../icons/logo1.png" alt="logo">
+                <a href="/index.html"><img src="../icons/logo1.png" alt="logo"></a>
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
