--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <a href="pages/">Filmes</a>
                 <a href="pages/">Series</a>
                 <a href="pages/">Sobre Nos</a>
-                <a id = "accont_Logo" href="pages/">Conta <img src="icons/logo.png" alt="profile_photo"></a>
+                <a href="pages/">Conta</a>
+                <a id = "accont_Logo" href="pages/"><img src="icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
@@ -63,7 +64,7 @@
                         <a href="icons/playern1 .png" target="_blank"><img src="/icons/playern1 .png" alt="movie_img"></a>
                         <h2>Jogador Nº 1</h2>
                         <p>Ano: 2018</p>
-                        <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="pages/playern1.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
