--- a/pages/playern1.html
+++ b/pages/playern1.html
@@ -26,21 +26,26 @@
     </header>
     <div class="content">
         <div class="banner">
-            <img src="/icons/banners/back_tofuture_banner.jpg" alt="Back To The Future Banner">
+            <img src="/icons/banners/palyern1banner.jpg" alt="Back To The Future Banner">
             <div class="txt_content">
-                <h2>De Volta Para o Futuro</h2>
-                <article>Marty McFly é um adolescente que viaja acidentalmente para o ano de 1955 em um DeLorean modificado como máquina do tempo, criado por seu excêntrico amigo, Dr. Emmett Brown. Lá, ele encontra seus pais ainda jovens e precisa garantir que eles se apaixonem, ou ele deixará de existir.</article>
+                <h2>Jogador Nº 1</h2>
+                <article>
+                    Em 2045, Wade Watts, assim como o resto da humanidade, prefere a realidade virtual do jogo OASIS ao mundo real.
+                    James Halliday, o excêntrico criador do jogo, morre e deixa sua fortuna para quem encontrar a chave de um 
+                    quebra-cabeça complexo dentro do jogo. A corrida começa em busca do controle do OASIS e da herança milionária.
+                </article>
                 <div class="movie_infos">
-                    <article><strong>Diretor:</strong> Robert Zemeckis</article>
-                    <article><strong>Gênero:</strong> Ficção científica, Aventura, Comédia</article>
-                    <article><strong>Duração:</strong> 1h 56min</article>
-                    <article><strong>Lançamento:</strong> 25 de dezembro de 1985 (Brasil)</article>
+                    <article><strong>Diretor:</strong> Steven Spielberg</article>
+                    <article><strong>Gênero:</strong> Ficção científica</article>
+                    <article><strong>Duração:</strong> 2h 20min</article>
+                    <article><strong>Lançamento:</strong> 29 de março de 2018 (Brasil)</article>
+                    <article><strong>Baseado em:</strong> Livro de Ernest Cline</article>
+                    <article><strong>Avaliação Google:</strong> 74% gostaram desse filme</article>
                 </div>
 
                 <div class="assessment_movie">
-                    <strong><p>IMDb: 8,5/10</p></strong>   
-                    <strong><p>Amazon: 8,5/10</p></strong>
-                    <strong><p>Rotten Tomatoes: 93%</p></strong>
+                    <strong><p>AdoroCinema: 4,4/5</p></strong>   
+                    <strong><p>Amazon: 7,4/10</p></strong>
                 </div>
             </div>
         </div>
