--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="content">
         <div class="most_watched">
-            <h1>Mais Vistos</h1>
+            <h1 id = "title_content" >Mais Vistos</h1>
             <section>
                 <div class="movie">
                     <div class="content_movie">
@@ -48,7 +48,7 @@
                 <div class="movie">
                     <div class="content_movie">
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
-                        <h2>Harry Potter e o Cálice de Fogo</h2>
+                        <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
                         <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
                     </div>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="recomend">
-            <h1>Recomendados</h1>
+            <h1 id = "title_content">Recomendados</h1>
             <section>
                 <div class="movie">
                     <div class="content_movie">
@@ -78,7 +78,7 @@
                 <div class="movie">
                     <div class="content_movie">
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
-                        <h2>Harry Potter e o Cálice de Fogo</h2>
+                        <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
                         <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
                     </div>
