--- a/pages/interstellar.html
+++ b/pages/interstellar.html
@@ -6,7 +6,7 @@
     <title>Interstellar</title>
     <link rel="shortcut icon" href="../icons/logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="../style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="../pages/style_pages.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="style_pages.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
 <body>
@@ -17,10 +17,10 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
-                <a href="pages/">Filmes</a>
-                <a href="pages/">Series</a>
+                <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
-                <a id = "accont_Logo" href="pages/">Conta <img src="../icons/logo.png" alt="profile_photo"></a>
+                <a href="pages/">Conta</a>
+                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
