--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
-                <a href="pages/">Filmes</a>
-                <a href="pages/">Series</a>
+                <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
-                <a id = "accont_Logo" href="pages/"><img src="icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
@@ -50,7 +49,7 @@
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
                         <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
-                        <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/harry_potter.html">Saiba Mais</a></button>
                     </div>
                 </div>
             </section>
@@ -72,7 +71,7 @@
                         <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/top_gun.jpg" alt="movie_img"></a>
                         <h2>Top Gun: Maverick</h2>
                         <p>Ano: 2022</p>
-                        <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="pages/top_gun.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
@@ -80,7 +79,7 @@
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
                         <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
-                        <button id = "btn_movie", type="button"><a href="">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/harry_potter.html">Saiba Mais</a></button>
                     </div>
                 </div>
             </section>
