--- a/pages/back_to_future.html
+++ b/pages/back_to_future.html
@@ -17,10 +17,10 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
-                <a href="pages/">Filmes</a>
-                <a href="pages/">Series</a>
+                <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
-                <a id = "accont_Logo" href="pages/">Conta <img src="../icons/logo.png" alt="profile_photo"></a>
+                <a href="pages/">Conta</a>
+                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
