--- a/pages/playern1.html
+++ b/pages/playern1.html
@@ -17,9 +17,9 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
-                <a href="pages/">Filmes</a>
-                <a href="pages/">Series</a>
+                <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
+                <a href="pages/">Conta</a>
                 <a id = "accont_Logo" href="pages/">Conta <img src="../icons/logo.png" alt="profile_photo"></a>
             </div>
         </nav>
