--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
+                <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
@@ -86,7 +87,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 - Desenvolvido por Quitto</p>
+        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames">Quitto</a></p>
     </footer>
 
 </body>
