--- a/pages/harry_potter.html
+++ b/pages/harry_potter.html
@@ -17,6 +17,7 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
+                <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
@@ -46,6 +47,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames">Quitto</a></p>
+    </footer>
     
 </body>
 </html>
