--- a/pages/movies.html
+++ b/pages/movies.html
@@ -17,6 +17,7 @@
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
+                <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
@@ -68,6 +69,8 @@
             </div>
         </section>
     </div>
-    
+    <footer>
+        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames">Quitto</a></p>
+    </footer>
 </body>
 </html>
