--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
-                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
@@ -34,7 +34,7 @@
                         <a href="icons/interstelar.png" target="_blank"><img src="/icons/interstelar.png" alt="movie_img"></a>
                         <h2>Interestelar</h2>
                         <p>Ano: 2014</p>
-                        <button id = "btn_movie", type="button"><a href="/pages/interstellar.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/interstellar.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
@@ -42,7 +42,7 @@
                         <a href="icons/backtothefulture.png" target="_blank"><img src="/icons/backtothefulture.png" alt="movie_img"></a>
                         <h2>De Volta Para o futuro</h2>
                         <p>Ano: 1985</p>
-                        <button id = "btn_movie", type="button"><a href="/pages/back_to_future.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/back_to_future.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
@@ -50,7 +50,7 @@
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
                         <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
-                        <button id = "btn_movie", type="button"><a href="/pages/harry_potter.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/harry_potter.html">Saiba Mais</a></button>
                     </div>
                 </div>
             </section>
@@ -64,15 +64,15 @@
                         <a href="icons/playern1 .png" target="_blank"><img src="/icons/playern1 .png" alt="movie_img"></a>
                         <h2>Jogador Nº 1</h2>
                         <p>Ano: 2018</p>
-                        <button id = "btn_movie", type="button"><a href="pages/playern1.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="pages/moive_pages/playern1.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
                     <div class="content_movie">
-                        <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/top_gun.jpg" alt="movie_img"></a>
+                        <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/moive_pages/top_gun.jpg" alt="movie_img"></a>
                         <h2>Top Gun: Maverick</h2>
                         <p>Ano: 2022</p>
-                        <button id = "btn_movie", type="button"><a href="pages/top_gun.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="pages/moive_pages/top_gun.html">Saiba Mais</a></button>
                     </div>
                 </div>
                 <div class="movie">
@@ -80,7 +80,7 @@
                         <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
                         <h2>Harry Potter</h2>
                         <p>Ano: 2005</p>
-                        <button id = "btn_movie", type="button"><a href="/pages/harry_potter.html">Saiba Mais</a></button>
+                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/harry_potter.html">Saiba Mais</a></button>
                     </div>
                 </div>
             </section>
