--- a/pages/moive_pages/harry_potter.html
+++ b/pages/moive_pages/harry_potter.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interstellar</title>
     <link rel="shortcut icon" href="../icons/logo1.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="style_pages.css"> <!-- Referência ao CSS -->
+        <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/pages/style_pages.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
 <body>
     <header>
         <nav>
             <div id = "logo">
-                <a href="/index.html"><img src="../icons/logo1.png" alt="logo"></a>
+                <a href="/index.html"><img src="/icons/logo1.png" alt="logo"></a>
                 <h1>Germina Flix</h1>
             </div>
             <div class="links">
@@ -21,13 +21,14 @@
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
-                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+
             </div>
         </nav>
     </header>
     <div class="content">
         <div class="banner">
-            <img src="/icons/banners/harry_potter.jpg" alt="Back To The Future Banner">
+            <img src="/icons/harrypotteher.jpg" alt="Back To The Future Banner">
             <div class="txt_content">
                 <h2>Harry Potter e o Cálice de Fogo</h2>
                 <article>
