--- a/pages/moive_pages/top_gun.html
+++ b/pages/moive_pages/top_gun.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interstellar</title>
     <link rel="shortcut icon" href="../icons/logo1.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="style_pages.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/pages/style_pages.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
 <body>
@@ -21,7 +21,8 @@
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="pages/">Sobre Nos</a>
                 <a href="pages/">Conta</a>
-                <a id = "accont_Logo" href="pages/"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+
             </div>
         </nav>
     </header>
