--- a/pages/moive_pages/top_gun.html
+++ b/pages/moive_pages/top_gun.html
@@ -19,8 +19,7 @@
             <div class="links">
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
-                <a href="pages/">Sobre Nos</a>
-                <a href="pages/">Conta</a>
+                <a href="/pages/account/account.html">Conta</a>
                 <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
 
             </div>
