--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="movie">
                     <div class="content_movie">
-                        <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/moive_pages/top_gun.jpg" alt="movie_img"></a>
+                        <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/top_gun.jpg" alt="movie_img"></a>
                         <h2>Top Gun: Maverick</h2>
                         <p>Ano: 2022</p>
                         <button id = "btn_movie", type="button"><a href="pages/moive_pages/top_gun.html">Saiba Mais</a></button>
