--- a/pages/moive_pages/top_gun.html
+++ b/pages/moive_pages/top_gun.html
@@ -48,6 +48,9 @@
             
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames" target="_blank">Quitto</a></p>
+    </footer>
     
 </body>
 </html>
