--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames">Quitto</a></p>
+        <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames" target="_blank">Quitto</a></p>
     </footer>
     
 </body>
