--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                 </div>
                 <div class="movie">
                     <div class="content_movie">
-                        <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
-                        <h2>Harry Potter</h2>
-                        <p>Ano: 2005</p>
-                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/harry_potter.html">Saiba Mais</a></button>
+                        <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/matrix_logo.jpg" alt="movie_img"></a>
+                        <h2>Matrix</h2>
+                        <p>Ano: 1999</p>
+                        <button id = "btn_movie", type="button"><a href="/pages/moive_pages/matrix.html">Saiba Mais</a></button>
                     </div>
                 </div>
             </section>
