--- a/pages/moive_pages/matrix.html
+++ b/pages/moive_pages/matrix.html
@@ -26,7 +26,7 @@
     </header>
     <div class="content">
         <div class="banner">
-            <img src="/icons/banners/banner_matrix.jpg" alt="Matrix Banner">
+            <img src="/icons/banners/banner_matrix.png" alt="Matrix Banner">
             <div class="txt_content">
                 <h2>Matrix</h2>
                 <article>
