--- a/pages/movies.html
+++ b/pages/movies.html
@@ -66,6 +66,14 @@
                     <button id = "btn_movie", type="button"><a href="/pages/movie_pages/harry_potter.html">Saiba Mais</a></button>
                 </div>
             </div>
+            <div class="movie">
+                <div class="content_movie">
+                    <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/matrix_logo.jpg" alt="movie_img"></a>
+                    <h2>Matrix</h2>
+                    <p>Ano: 1999</p>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/matrix.html">Saiba Mais</a></button>
+                </div>
+            </div>
         </section>
     </div>
     <footer>
