--- a/pages/moive_pages/harry_potter.html
+++ b/pages/moive_pages/harry_potter.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interstellar</title>
-    <link rel="shortcut icon" href="../icons/logo1.png" type="image/x-icon">
-        <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
+    <title>Harry Potter</title>
+    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
     <link rel="stylesheet" href="/pages/style_pages.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
@@ -14,13 +14,14 @@
         <nav>
             <div id = "logo">
                 <a href="/index.html"><img src="/icons/logo1.png" alt="logo"></a>
-                <h1>Germina Flix</h1>
+                <h1>Quitto Flix</h1>
+
             </div>
             <div class="links">
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="/pages/account/account.html">Conta</a>
-                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.svg" alt="profile_photo" style="width: 25px;"></a>
+                <a id = "accont_Logo" href="/pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
 
             </div>
         </nav>
