--- a/pages/movies.html
+++ b/pages/movies.html
@@ -28,10 +28,10 @@
         <section>
             <div class="movie">
                 <div class="content_movie">
-                    <a href="icons/interstelar.png" target="_blank"><img src="/icons/interstelar.png" alt="movie_img"></a>
+                    <a href="/icons/interstelar.png" target="_blank"><img src="/icons/interstelar.png" alt="movie_img"></a>
                     <h2>Interestelar</h2>
                     <p>Ano: 2014</p>
-                    <button id = "btn_movie", type="button"><a href="/pages/interstellar.html">Saiba Mais</a></button>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/interstellar.html">Saiba Mais</a></button>
                 </div>
             </div>
             <div class="movie">
@@ -39,7 +39,7 @@
                     <a href="icons/backtothefulture.png" target="_blank"><img src="/icons/backtothefulture.png" alt="movie_img"></a>
                     <h2>De Volta Para o futuro</h2>
                     <p>Ano: 1985</p>
-                    <button id = "btn_movie", type="button"><a href="/pages/back_to_future.html">Saiba Mais</a></button>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/back_to_future.html">Saiba Mais</a></button>
                 </div>
             </div>
             <div class="movie">
@@ -47,7 +47,7 @@
                     <a href="icons/playern1 .png" target="_blank"><img src="/icons/playern1 .png" alt="movie_img"></a>
                     <h2>Jogador Nº 1</h2>
                     <p>Ano: 2018</p>
-                    <button id = "btn_movie", type="button"><a href="/pages/movie_pages/playern1.html">Saiba Mais</a></button>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/playern1.html">Saiba Mais</a></button>
                 </div>
             </div>
             <div class="movie">
@@ -55,7 +55,7 @@
                     <a href="icons/top_gun.jpg" target="_blank"><img src="/icons/top_gun.jpg" alt="movie_img"></a>
                     <h2>Top Gun: Maverick</h2>
                     <p>Ano: 2022</p>
-                    <button id = "btn_movie", type="button"><a href="pages/movie_pages/top_gun.html">Saiba Mais</a></button>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/top_gun.html">Saiba Mais</a></button>
                 </div>
             </div>
             <div class="movie">
@@ -63,7 +63,7 @@
                     <a href="icons/harrypotteher.jpg" target="_blank"><img src="/icons/harrypotteher.jpg" alt="movie_img"></a>
                     <h2>Harry Potter</h2>
                     <p>Ano: 2005</p>
-                    <button id = "btn_movie", type="button"><a href="/pages/movie_pages/harry_potter.html">Saiba Mais</a></button>
+                    <button id = "btn_movie", type="button"><a href="/pages/moive_pages/harry_potter.html">Saiba Mais</a></button>
                 </div>
             </div>
             <div class="movie">
