--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -27,13 +27,15 @@
     </header>
     <div class="content">
         <div class="account">
-            <div class="icon_user"><img src="/icons/icon.png" alt="account_icon"></div>
-            <h2>Nome: User</h2>
-            <strong><p>Email: exemplo@email.com</p></strong>
-            </strong><p>Senha: <strong> ••••••••••••</strong></p>
-            <div class="plano">
-                <img src="/icons/banners/banner_palno.png" alt="banner_plano">
-                <h3>Plano: MAX</h3>
+            <div class="account_content">
+                <div class="icon_user"><img src="/icons/icon.png" alt="account_icon"></div>
+                <h2>Nome: User</h2>
+                <strong><p>Email: exemplo@email.com</p></strong>
+                </strong><p>Senha: <strong> ••••••••••••</strong></p>
+                <div class="plano">
+                    <img src="/icons/banners/banner_palno.png" alt="banner_plano">
+                    <h3>Plano: MAX</h3>
+                </div>
             </div>
         </div>
     </div>
