--- a/pages/moive_pages/matrix.html
+++ b/pages/moive_pages/matrix.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix</title>
-        <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/pages/style_pages.css">
     <script src="js.js"></script>
@@ -21,7 +21,7 @@
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="/pages/account/account.html">Conta</a>
-                <a id="account_Logo" href="/pages/account/account.html"><img src="/icons/icon.png alt="profile_photo" style="width: 25px;"></a>
+                <a id="accont_Logo" href="/pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
