--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -20,8 +20,8 @@
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="/pages//about_me/about_me.html">Sobre Min</a>
-                <a href="pages/account/account.html">Conta</a>
-                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
+                <a href="/pages/account/account.html">Conta</a>
+                <a id = "accont_Logo" href="/pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
