--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -49,6 +49,18 @@
             <h2>Projetos: </h2>
             <div class="project_contener">
                 <img src="" alt="">
+                <h2>Core OS Finace</h2>
+                <article>Uma ferramenta De Gestao Finaceria</article>
+                <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
+            </div>
+            <div class="project_contener">
+                <img src="" alt="">
+                <h2>Touch command for Windows</h2>
+                <article>O Comando touch para Windows com C++</article>
+                <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
+            </div>
+            <div class="project_contener">
+                <img src="" alt="">
                 <h2>JBS Work Flow</h2>
                 <article>JBS Work Flow é uma ferramenta desenvolvida por alunos do Germinare Tech com o objetivo de facilitar a organização e o acompanhamento das rotinas escolares. A aplicação oferece recursos como notificações automáticas, automação de tarefas, integração com inteligência artificial e visualização de informações por meio de widgets, promovendo mais produtividade no dia a dia acadêmico.</article>
                 <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
