--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
-</head>
-<body>
     <header>
         <nav>
             <div id = "logo">
-                <a href="/index.html"><img src="../icons/logo1.png" alt="logo"></a>
+                <a class="link_Logo" href="/index.html"><img src="../icons/logo1.png" alt="logo"></a>
                 <h1>Quitto Flix</h1>
             </div>
             <div class="links">
