--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -29,13 +29,13 @@
     <div class="content">
         <div class="about_me">
             <div class="infos">
-                <img id = "profile_photo_abount_me" src="/icons/Quitto .png" alt="">
+                <img id = "profile_photo_abount_me" src="/icons/Logo1.jpg" alt="">
                 <h2>Quitto</h2>
 
                 <p>Olá, meu nome é Gustavo Quitto, tenho 15 anos e sou estudante do Germinare TECH.
                 Tenho um grande interesse por tecnologia e programação. Atualmente, programo principalmente em Python e Java, mas estou expandindo meus conhecimentos para linguagens como C, C++, Rust (gosto de verdade da alocação de memória do rust , não é só modinha) e também C#.
-                Apesar de gostar muito do ambiente Linux, sou fã de carterinha do Windows e admiro bastante sua interface e experiência de uso.
-                Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Alex Caetano dos Santos.
+                Apesar de gostar muito do ambiente Linux, sou fã do Windows e admiro bastante sua interface e experiência de uso.
+                Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Carlinhos.
                 </p>
             </div>
             <div class="redes">
@@ -46,45 +46,84 @@
         </div>
 
         <section class="projects">
-            <h2>Projetos: </h2>
+            <h2>Projetos:</h2>
+
             <div class="project_contener">
                 <img src="" alt="">
-                <h2>Core OS Finace</h2>
-                <article>Uma ferramenta De Gestao Finaceria</article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
+                <h2>CoreOS Finance</h2>
+                <article>Uma ferramenta de gestão financeira.</article>
+                <div class="tags">
+                    <div class="linguage"><p>Python</p></div>
+                </div>
+                <button class="btn_link">
+                    <a href="https://github.com/QuittoGames/CoreOS_Finace" target="_blank">Link Repositório</a>
+                </button>
             </div>
+
             <div class="project_contener">
                 <img src="" alt="">
-                <h2>Touch command for Windows</h2>
-                <article>O Comando touch para Windows com C++</article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
+                <h2>TimeLean_Website</h2>
+                <p>Projeto feito para o projeto interdisciplinar da Germinare Tech.</p>
+                <div class="tags">
+                    <div class="linguage"><p>Java</p></div>
+                </div>
+                <article>Repositório do website da TimeLean, aplicativo desenvolvido pelos alunos do Germinare Tech, escola do Instituto J&F, focado em otimizar a gestão de microparadas e produtividade com tecnologia e design eficiente. </article>
+                <button class="btn_link">
+                    <a href="https://github.com/HiveMind-Instituto-J-F/TimeLean_Website" target="_blank">Link Repositório</a>
+                </button>
             </div>
+
+            <div class="project_contener">
+                <img src="" alt="">
+                <h2>Touch Command for Windows</h2>
+                <div class="tags">
+                    <div class="linguage"><p>C++</p></div>
+                </div>
+                <article>O comando <code>touch</code> para Windows usando C++.</article>
+                <button class="btn_link">
+                    <a href="https://github.com/QuittoGames/touch" target="_blank">Link Repositório</a>
+                </button>
+            </div>
+
             <div class="project_contener">
                 <img src="" alt="">
                 <h2>JBS Work Flow</h2>
-                <article>JBS Work Flow é uma ferramenta desenvolvida por alunos do Germinare Tech com o objetivo de facilitar a organização e o acompanhamento das rotinas escolares. A aplicação oferece recursos como notificações automáticas, automação de tarefas, integração com inteligência artificial e visualização de informações por meio de widgets, promovendo mais produtividade no dia a dia acadêmico.</article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/JBS-Work-Flow">Link Repositorio</a></button>
+                <div class="tags">
+                    <div class="linguage"><p>Python</p></div>
+                    <div class="linguage"><p>Multitread</p></div>
+                </div>
+                <article>Ferramenta criada no Germinare Tech para organização escolar, automação de tarefas e visualização inteligente de informações.</article>
+                <button class="btn_link">
+                    <a href="https://github.com/QuittoGames/JBS-Work-Flow" target="_blank">Link Repositório</a>
+                </button>
             </div>
+
             <div class="project_contener">
                 <img src="" alt="">
                 <h2>Git Script</h2>
-                <article>git_start_script é um script Python simples criado para automatizar a inicialização de repositórios Git no Windows. Ideal para desenvolvedores que frequentemente criam novos repositórios e querem agilizar processos como init, add, commit, push e configuração do origin. Feito com foco em produtividade, o projeto conta com uma estrutura modular, suporte a execução via terminal ou atalho .bat e é ideal para quem trabalha com Git diariamente.
-                </article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/git_script">Link Repositorio</a></button>
+                <div class="tags">
+                    <div class="linguage"><p>Python</p></div>
+                </div>
+                <article>Script Python para automatizar init, add, commit, push e configuração de repositórios Git no Windows.</article>
+                <button class="btn_link">
+                    <a href="https://github.com/QuittoGames/git_script" target="_blank">Link Repositório</a>
+                </button>
             </div>
+
             <div class="project_contener">
                 <img src="" alt="">
                 <h2>Project Setup 2.0</h2>
-                <article>ProjectSetup é uma ferramenta automatizada para criação de projetos, desenvolvida para simplificar o início de novos trabalhos. A versão 2.0 do ProjectSetup traz melhorias importantes em relação à versão anterior, permitindo a criação não apenas de projetos em Python, mas também de sites e projetos Django, com uma interface de usuário interativa.</article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/ProjectSetup-2.0">Link Repositorio</a></button>
-            </div>
-             <div class="project_contener">
-                <img src="" alt="">
-                <h2>Auto Flow</h2>
-                <article>About Este projeto automatiza tarefas de desenvolvimento por meio de controle de voz, usando Python, PyQt6 e reconhecimento de fala.</article>
-                <button class="btn_link"><a href="https://github.com/QuittoGames/Auto-Flow">Link Repositorio</a></button>
+                <div class="tags">
+                    <div class="linguage"><p>Python</p></div>
+                    <div class="linguage"><p>Shell</p></div>
+                </div>
+                <article>Ferramenta automatizada para criar projetos Python, sites e projetos Django com interface interativa.</article>
+                <button class="btn_link">
+                    <a href="https://github.com/QuittoGames/ProjectSetup-2.0" target="_blank">Link Repositório</a>
+                </button>
             </div>
         </section>
+
     </div>
     <footer>
         <p>&copy; 2025 - Desenvolvido por <a href="https://github.com/QuittoGames" target="_blank">Quitto</a></p>
