--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quitto Flix</title>
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
     <header>
         <nav>
@@ -17,8 +17,8 @@
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
                 <a href="/pages/about_me/about_me.html">Sobre Min</a>
-                <a href="pages/account/account.html">Conta</a>
-                <a id = "accont_Logo" href="pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
+                <a href="/pages/account/account.html">Conta</a>
+                <a id = "accont_Logo" href="/pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
             </div>
         </nav>
     </header>
