Fix Paths of css and create var.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quitto Flix</title>
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
     <header>
         <nav>
