--- a/pages/moive_pages/harry_potter.html
+++ b/pages/moive_pages/harry_potter.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter</title>
     <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="/pages/style_pages.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/style_pages.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
 <body>
