--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quitto Flix</title>
     <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="/pages/about_me/about_me_sytle.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/about_me_sytle.css"> <!-- Referência ao CSS -->
     <script src="js.js"></script> <!-- Referência ao JavaScript -->
 </head>
 <body>
@@ -19,7 +19,7 @@
             <div class="links">
                 <a href="/index.html">Home</a>
                 <a href="/pages/movies.html">Filmes</a>
-                <a href="/pages//about_me/about_me.html">Sobre Min</a>
+                <a href="/pages/about_me/about_me.html">Sobre Min</a>
                 <a href="/pages/account/account.html">Conta</a>
                 <a id = "accont_Logo" href="/pages/account/account.html"><img src="/icons/icon.png" alt="profile_photo" style="width: 25px;"></a>
             </div>
