--- a/pages/account/account.html
+++ b/pages/account/account.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conta</title>
     <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="/pages/style_pages.css"> <!-- Referência ao CSS -->
-    <link rel="stylesheet" href="/pages/account/accont_style.css"> <!-- Referência ao CSS -->
-    <script src="js.js"></script> <!-- Referência ao JavaScript -->
+    <link rel="stylesheet" href="/css/style.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/style_pages.css"> <!-- Referência ao CSS -->
+    <link rel="stylesheet" href="/css/accont_style.css"> <!-- Referência ao CSS -->
 </head>
 <body>
     <header>
