--- a/pages/moive_pages/matrix.html
+++ b/pages/moive_pages/matrix.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix</title>
     <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/pages/style_pages.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style_pages.css">
     <script src="js.js"></script>
 </head>
 <body>
