--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -31,11 +31,11 @@
             <div class="infos">
                 <img id = "profile_photo_abount_me" src="/icons/Logo1.jpg" alt="">
                 <h2>Quitto</h2>
-
-                <p>Olá, meu nome é Gustavo Quitto, tenho 15 anos e sou estudante do Germinare TECH.
-                Tenho um grande interesse por tecnologia e programação. Atualmente, programo principalmente em Python e Java, mas estou expandindo meus conhecimentos para linguagens como C, C++, Rust (gosto de verdade da alocação de memória do rust , não é só modinha) e também C#.
-                Apesar de gostar muito do ambiente Linux, sou fã do Windows e admiro bastante sua interface e experiência de uso.
-                Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Carlinhos.
+                <p>
+                    Olá, meu nome é Gustavo Quitto, tenho 15 anos e sou estudante do Germinare TECH.
+                    Tenho um grande interesse por tecnologia e programação. Atualmente, programo principalmente em Python e Java, mas estou expandindo meus conhecimentos para linguagens como C, C++, Rust (gosto de verdade da alocação de memória do Rust, não é só modinha) e também C#.
+                    Apesar de gostar muito do ambiente Linux, sou fã do Windows , Também gosto muito de hardware
+                    Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Carlinhos.
                 </p>
             </div>
             <div class="redes">
@@ -78,6 +78,7 @@
                 <h2>Touch Command for Windows</h2>
                 <div class="tags">
                     <div class="linguage"><p>C++</p></div>
+                    <div class="linguage"><p>Shell</p></div>
                 </div>
                 <article>O comando <code>touch</code> para Windows usando C++.</article>
                 <button class="btn_link">
@@ -103,6 +104,7 @@
                 <h2>Git Script</h2>
                 <div class="tags">
                     <div class="linguage"><p>Python</p></div>
+                    <div class="linguage"><p>Shell</p></div>
                 </div>
                 <article>Script Python para automatizar init, add, commit, push e configuração de repositórios Git no Windows.</article>
                 <button class="btn_link">
