add more content in abount me

--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -38,6 +38,34 @@
                     Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Carlinhos.
                 </p>
             </div>
+        </div>
+        <div class="cards">
+            <div class="card">
+                    <h2>Curiosidades</h2>
+                    <ol>
+                        <li>Tenho Um server em casa (sim isso e estanho)</li>
+                        <hr>        
+                        <li>Gosto de jogar (<a href="https://www.fortnite.com/?lang=pt-BR">Fortinite</a> , <a href="https://www.ea.com/pt-br/games/battlefield/battlefield-6">BF6</a>, <a href="https://forza.net/horizon">Forza</a> etc)</li>
+                        <hr>
+                        <li>Prefiro Dev e Backend</li>
+                        <hr>
+                        <li>Gosto muito de músicas antigas (anos 60, 70, 80 e 90), embora também curta as novas, mas com preferência pelas antigas.</li>
+                        <hr>
+                        <li>Amo Hardware de PC</li>
+                        <hr>
+                    </ol>
+                </div>
+            <div class="card">
+                <h2>Locais Que Ja Visitei</h2>
+                <ul>
+                    <li>Disney (Quando era menor ent nao lembro direito)</li>
+                    <hr>
+                    <li>Hot Bet (Olimpia)</li>
+                    <hr>
+                    <li>Beto Carrero</li>
+                </ul>
+            </div>
+        </div>
             <div class="redes">
                 <a href="https://github.com/QuittoGames"><img src="/icons/git_hub.png" alt=""></a>
                 <a href="https://www.instagram.com/quittooficial/"><img src="/icons/instagram.png" alt=""></a>
