add more content in abount me

--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -32,9 +32,9 @@
                 <img id = "profile_photo_abount_me" src="/icons/Logo1.jpg" alt="">
                 <h2>Quitto</h2>
                 <p>
-                    Olá, meu nome é Gustavo Quitto, tenho 15 anos e sou estudante do Germinare TECH.
-                    Tenho um grande interesse por tecnologia e programação. Atualmente, programo principalmente em Python e Java, mas estou expandindo meus conhecimentos para linguagens como C, C++, Rust (gosto de verdade da alocação de memória do Rust, não é só modinha) e também C#.
-                    Apesar de gostar muito do ambiente Linux, sou fã do Windows , Também gosto muito de hardware
+                    Olá, meu nome é Gustavo Quitto, tenho 15 anos e sou estudante do Germinare Tech.
+                    Tenho interesse em tecnologia e programação. Atualmente, programo principalmente em Python e Java, e estou buscando aprender mais sobre C++, C e também aprimorar meus conhecimentos em Java e C#.
+                    Apesar de gostar muito do ambiente Linux, sou fã do Windows e também curto bastante hardware.
                     Este site foi desenvolvido como parte de um trabalho para a disciplina de Desenvolvimento Web, orientado pelo professor Carlinhos.
                 </p>
             </div>
