--- a/pages/about_me/about_me.html
+++ b/pages/about_me/about_me.html
@@ -43,9 +43,9 @@
             <div class="card">
                     <h2>Curiosidades</h2>
                     <ol>
-                        <li>Tenho Um server em casa (sim isso e estanho)</li>
+                        <li>Tenho Um server em casa (sim isso e estanho mais hoje em dia ta desligado)</li>
                         <hr>        
-                        <li>Gosto de jogar (<a href="https://www.fortnite.com/?lang=pt-BR">Fortinite</a> , <a href="https://www.ea.com/pt-br/games/battlefield/battlefield-6">BF6</a>, <a href="https://forza.net/horizon">Forza</a> etc)</li>
+                        <li>Gosto de jogar (<a style="color: blue;" href="https://www.chess.com/member/quittogames">Xadrex</a> , <a style="color: blue;" href="https://store.steampowered.com/app/3241660/REPO/">REPO</a>, <a style="color: blue;" href="https://forza.net/horizon">Forza</a> etc)</li>
                         <hr>
                         <li>Prefiro Dev e Backend</li>
                         <hr>
